qthybris (0.22) UNRELEASED; urgency=low

  * Added ApplicationListModel::get method.

 -- Florian Boucault <florian.boucault@canonical.com>  Mon, 10 Dec 2012 15:08:08 +0000

qthybris (0.21) quantal; urgency=low

  * Added support for application snapshotting.

 -- Loïc Molinari <loic.molinari@canonical.com>  Fri, 07 Dec 2012 16:10:40 +0100

qthybris (0.21) quantal; urgency=low

  * Added support for maximization and hard-coded strut for the phone.

 -- Loïc Molinari <loic.molinari@canonical.com>  Thu, 06 Dec 2012 13:32:27 +0100

qthybris (0.20) UNRELEASED; urgency=low

  * Added support for application management.

 -- Loïc Molinari <loic.molinari@canonical.com>  Thu, 06 Dec 2012 11:02:49 +0100

qthybris (0.19) quantal; urgency=low

  * Implemented support for a basic theme based on generic unix theme

 -- Renato Araujo Oliveira Filho <renato@renatoLenovo>  Wed, 05 Dec 2012 09:40:45 +0000

qthybris (0.18) quantal; urgency=low

  * Added application module.

 -- Loïc Molinari <loic.molinari@canonical.com>  Fri, 30 Nov 2012 17:35:08 +0200

qthybris (0.17) quantal; urgency=low

  * Fixed show/hide crash.

 -- Loïc Molinari <loic.molinari@canonical.com>  Fri, 30 Nov 2012 13:44:39 +0200

qthybris (0.16) quantal; urgency=low

  [ Thomas Voss ]
  * Added support for hiding/showing native windows.

 -- Michael Frey <michael.frey@canonical.com>  Thu, 29 Nov 2012 11:53:24 -0500

qthybris (0.15) quantal; urgency=low

  * Ensured window states are set at creation.

 -- Loïc Molinari <loic.molinari@canonical.com>  Thu, 29 Nov 2012 16:41:30 +0200

qthybris (0.14) quantal; urgency=low

  * Added support for window position.

 -- Thomas Moenicke <thomas@pachamama>  Thu, 29 Nov 2012 15:10:38 +0100

qthybris (0.13) quantal; urgency=low

  * Added support for the new credentials system.

 -- Loïc Molinari <loic.molinari@canonical.com>  Mon, 26 Nov 2012 18:30:12 +0200

qthybris (0.12) quantal; urgency=low

  * Added support to specify surface roles.
